--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <body>
         <div class="slim">
             <header class="blur">
-    <a href="../index.html"><img src="/img/logo.png" alt=""></a>
+    <a href="/index.html"><img src="/img/logo.png" alt=""></a>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="applications.html">Applications</a>
-        <a href="downloads.html">Downloads</a>
+        <a href="/index.html">Home</a>
+        <a href="/applications.html">Applications</a>
+        <a href="/downloads.html">Downloads</a>
         <!-- <a href="#">Videos</a> -->
-        <a href="../blog.html">Blog</a>
+        <a href="/blog.html">Blog</a>
     </nav>
     <div id="account_info">
         <small><a href="#">Login</a></small>
@@ -37,11 +37,11 @@
     </div>
 </header>
 <div id="hamburger_menu" class="blur">
-    <a href="index.html">Home</a>
-    <a href="applications.html">Applications</a>
-    <a href="downloads.html">Downloads</a>
+    <a href="/index.html">Home</a>
+    <a href="/applications.html">Applications</a>
+    <a href="/downloads.html">Downloads</a>
     <!-- <a href="#">Videos</a> -->
-    <a href="../blog.html">Blog</a>
+    <a href="/blog.html">Blog</a>
 </div>
         </div>
         <main>
