Responsive design for blog implemented

--- a/blog.html
+++ b/blog.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
             
-            <section>
+            <section id="blog_list">
                 <div class="blog">
                     
                     <a href="/blog/001-creating-this-website.html">
