--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
                     <a href="#" class="tile" style="background-image: url(img/projects/3dprinter.webp);">
                         <div class="tile_wrap">
                             <h3>3D Printer Utility</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam laudantium, dolores cumque exercitationem quae sunt!</p>
+                            <p>Connect to your 3D printer via serial. This lightweight desktop application allows you to effortlessly send and receive G-Code commands, monitor your printer's status, and even capture timelapses of your prints.</p>
                         </div>
                     </a>
                     <a href="#" class="tile" style="background-image: url(img/projects/img_opt.jpg);">
                         <div class="tile_wrap">
                             <h3>Image Optimizer</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam laudantium, dolores cumque exercitationem quae sunt!</p>
+                            <p>Locally optimize images for your website. Whether you prefer a one-at-a-time approach or need to process images in bulk, this tool ensures seamless optimization for improved website performance.</p>
                         </div>
                     </a>
                     <a href="#" class="tile" style="background-image: url(img/projects/flashcards.jpg);">
@@ -85,7 +85,7 @@
                 <h2><a href="#">Downloads &#11100;</a></h2>
                 <div id="downloads">
                     <div class="panel">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, nisi!</p>
+                        <p>Find all downloadable media on this webpage.</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit neque illum reiciendis veniam aperiam libero fugit dolorum doloremque quia unde, nostrum dicta natus omnis laborum.</p>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis dolores in, odit, provident distinctio nam sint ea porro, culpa dignissimos optio. Dolore labore nisi amet quia, corporis nam ab illo esse rerum, nemo illum. Quis architecto nulla libero laborum sint? Ipsa quis sint rerum, totam quibusdam perspiciatis nihil voluptatibus eveniet?</p>
                     </div>
