Updated index and fixed blog hero

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <p>Locally optimize images for your website. Whether you prefer a one-at-a-time approach or need to process images in bulk, this tool ensures seamless optimization for improved website performance.</p>
                         </div>
                     </a>
-                    <a href="#" class="tile" style="background-image: url(img/projects/flashcards.jpg);">
+                    <!-- <a href="#" class="tile" style="background-image: url(img/projects/flashcards.jpg);">
                         <div class="tile_wrap">
                             <h3>Flashcards</h3>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam laudantium, dolores cumque exercitationem quae sunt!</p>
@@ -78,16 +78,16 @@
                             <h3>PixelPulse</h3>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam laudantium, dolores cumque exercitationem quae sunt!</p>
                         </div>
-                    </a>
+                    </a> -->
                 </div>
             </section>
             <section>
                 <h2><a href="#">Downloads &#11100;</a></h2>
                 <div id="downloads">
-                    <div class="panel">
-                        <p>Find all downloadable media on this webpage.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit neque illum reiciendis veniam aperiam libero fugit dolorum doloremque quia unde, nostrum dicta natus omnis laborum.</p>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis dolores in, odit, provident distinctio nam sint ea porro, culpa dignissimos optio. Dolore labore nisi amet quia, corporis nam ab illo esse rerum, nemo illum. Quis architecto nulla libero laborum sint? Ipsa quis sint rerum, totam quibusdam perspiciatis nihil voluptatibus eveniet?</p>
+                    <div class="panel text">
+                        <p>Explore the available downloads on this page to access valuable resources and media.</p>
+                        <p>Explore the downloads section to discover a variety of materials, including informative documents, guides, and multimedia content designed to enhance your experience. Whether you're looking for wallpapers, artworks, or 3D printable STL files, you'll find a diverse range of resources to enrich your journey.</p>
+                        <p>Download and enjoy the wealth of information we have curated for you.</p>
                     </div>
                     <div class="panel slideshow" id="slideshow">
                         <div class="image" data-index="0" data-view="1" onclick="imgSelect(this);">
@@ -102,14 +102,14 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <section style="display: none;">
                 <h2><a>Videos<!-- &#11100; --></a></h2>
                 <div class="videos">
                     <div class="video">
                         <iframe src="https://www.youtube-nocookie.com/embed/Tp8tZgN1BFY?si=DVgSCg9fJ7Q2gY6W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                     <div class="panel">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto et fugit obcaecati deserunt minus sed nam vitae iusto perspiciatis! Quibusdam quasi repellendus at. Sint fugit magni vitae beatae dolorum, voluptas quo odit nihil tenetur. Illum repellendus quae quibusdam sapiente veniam. Earum in, ad consequuntur nam quos maxime pariatur odio dolorem!</p>
+                        <p>Welcome to the Videos section, where we bring technology to life! Dive into engaging content covering the latest in tech trends, insightful product reviews, and tutorials that simplify complex concepts. Explore our collection of videos that showcase innovative technology solutions, unveil exciting product launches, and offer valuable insights into the digital world. Join us on this journey of exploration and stay tuned for regular updates on cutting-edge technology and our featured products.</p>
                     </div>
                 </div>
             </section>
