Minor changes and improvements

--- a/applications.html
+++ b/applications.html
@@ -48,7 +48,7 @@
             <div id="hero">
                 <div id="hero_image"></div>
                 <div id="hero_text">
-                    <h1>Applications</h1>
+                    <h1>The Applications Page is Currently</h1>
                     <h2>Under Developmemt</h2>
                 </div>
             </div>
