--- a/applications/001-3d-printer-utility.html
+++ b/applications/001-3d-printer-utility.html
@@ -59,6 +59,7 @@
                 </div>
             </div>
             <section>
+                Connect to your 3D printer via serial. This lightweight desktop application allows you to effortlessly send and receive G-Code commands, monitor your printer's status, and even capture timelapses of your prints.
                 
 
             </section>
