--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <h2><a href="/downloads.html">Downloads &#11100;</a></h2>
                 <div id="downloads">
                     <div class="panel text">
-                        <p>Explore the available downloads on this page to access valuable resources and media.</p>
+                        <p><b>Find the available downloads on this page to access valuable resources and media.</b></p>
                         <p>Explore the downloads section to discover a variety of materials, including informative documents, guides, and multimedia content designed to enhance your experience. Whether you're looking for wallpapers, artworks, or 3D printable STL files, you'll find a diverse range of resources to enrich your journey.</p>
                         <p>Download and enjoy the wealth of information we have curated for you.</p>
                     </div>
