--- a/applications/002-image-optimizer.html
+++ b/applications/002-image-optimizer.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <section>
-                Connect to your 3D printer via serial. This lightweight desktop application allows you to effortlessly send and receive G-Code commands, monitor your printer's status, and even capture timelapses of your prints.
+                Locally optimize images for your website. Whether you prefer a one-at-a-time approach or need to process images in bulk, this tool ensures seamless optimization for improved website performance.
                 
 
             </section>
