--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <a href="/applications/002-image-optimizer.html" class="tile" style="background-image: url('/img/applications/image_optimizer/hero.jpg');">
                         <div class="tile_wrap">
                             <h3>Image Optimizer</h3>
-                            <p>Connect to your 3D printer via serial. This lightweight desktop application allows you to effortlessly send and receive G-Code commands, monitor your printer's status, and even capture timelapses of your prints.</p>
+                            <p>Locally optimize images for your website. Whether you prefer a one-at-a-time approach or need to process images in bulk, this tool ensures seamless optimization for improved website performance.</p>
                         </div>
                     </a>
                     
