--- a/applications.html
+++ b/applications.html
@@ -91,9 +91,9 @@
         </span>
         <span>
             <h4>Social</h4>
-            <a href="#"><img src="/img/icons/icons8-instagram.svg" alt=""></a>
-            <a href="#"><img src="/img/icons/icons8-github.svg" alt=""></a>
-            <a href="#"><img src="/img/icons/icons8-youtube.svg" alt=""></a>
+            <a href="https://www.instagram.com/naztechmedia/"><img src="/img/icons/icons8-instagram.svg" alt=""></a>
+            <a href="https://github.com/NILBOGtheSavior"><img src="/img/icons/icons8-github.svg" alt=""></a>
+            <a href="https://www.youtube.com/channel/UCFLmlQDTB47XnFYeJE_Pe4Q"><img src="/img/icons/icons8-youtube.svg" alt=""></a>
             <small>
                 <a href="#"><p><u>Terms and Conditions</u></p></a>
                 <a href="#"><p><u>Privacy Policy</u></p></a>
