--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,7 @@
         <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="32x32">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="/js/menu.js"></script>
+        <script src="/js/code-copy.js"></script>
         <link rel="stylesheet" href="/css/reset.css">
         <link rel="stylesheet" href="/css/style.css">
         <link rel="stylesheet" href="/css/code.css">
