--- a/software/002-image-optimizer.html
+++ b/software/002-image-optimizer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>3D Printer Utility | Naztech Empire</title>
+        <title>Image Optimizer | Naztech Empire</title>
         <meta name="description" content="">
                 <meta charset="utf-8">
         <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -13,11 +13,11 @@
         <link rel="stylesheet" href="/css/reset.css">
         <link rel="stylesheet" href="/css/style.css">
         <link rel="stylesheet" href="/css/code.css">
-        <link rel="stylesheet" href="/css/blog.css">
+        <link rel="stylesheet" href="/css/software.css">
         <script src="/js/contents.js"></script>
         <style>
             #hero_image {
-                background-image: url('/img/applications/3d_printer_utility/hero.jpg');
+                background-image: url('/img/software/image_optimizer/hero.jpg');
             }
         </style>
     </head>
@@ -27,7 +27,7 @@
     <a href="/index.html"><img src="/img/logo.png" alt=""></a>
     <nav>
         <a href="/index.html">Home</a>
-        <a href="/applications.html">Applications</a>
+        <a href="/software.html">Software</a>
         <!-- <a href="/downloads.html">Downloads</a> -->
         <!-- <a href="#">Videos</a> -->
         <a href="/blog.html">Blog</a>
@@ -45,7 +45,7 @@
 </header>
 <div id="hamburger_menu" class="blur">
     <a href="/index.html">Home</a>
-    <a href="/applications.html">Applications</a>
+    <a href="/software.html">Software</a>
     <!-- <a href="/downloads.html">Downloads</a> -->
     <!-- <a href="#">Videos</a> -->
     <a href="/blog.html">Blog</a>
@@ -56,11 +56,11 @@
             <div id="hero">
                 <div id="hero_image"></div>
                 <div id="hero_text">
-                    <h1>3D Printer Utility</h1>
+                    <h1>Image Optimizer</h1>
                 </div>
             </div>
             <section>
-                Connect to your 3D printer via serial. This lightweight desktop application allows you to effortlessly send and receive G-Code commands, monitor your printer's status, and even capture timelapses of your prints.
+                Locally optimize images for your website. Whether you prefer a one-at-a-time approach or need to process images in bulk, this tool ensures seamless optimization for improved website performance.
                 
 
             </section>
@@ -77,7 +77,7 @@
         <span>
             <h4>Site Map</h4>
             <a href="index.html"><p>Home</p></a>
-            <a href="applications.html"><p>Applications</p></a>
+            <a href="software.html"><p>Software</p></a>
             <!-- <a href="downloads.html"><p>Downloads</p></a> -->
             <!-- <a href="#"><p>Videos</p></a> -->
             <a href="blog.html"><p>Blog</p></a>
