--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,7 @@
         <script src="/js/code-copy.js"></script>
         <link rel="stylesheet" href="/css/reset.css">
         <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/css/global.css">
         <link rel="stylesheet" href="/css/code.css">
         <link rel="stylesheet" href="css/blog.css">
         <script src="js/slideshow.js"></script>
@@ -63,6 +64,7 @@
                             <div class="info">
                                 <h6> Jan 08, 2024 </h6>
                                 <h4>Using Tkinter to Create GUI Apps in Python <!-- <h5> Nasser Abumariam </h5> --> </h4>
+                                <h5>#Software</h5>
                             </div>
                         </div>
                     </a>
@@ -73,6 +75,7 @@
                             <div class="info">
                                 <h6> Jan 01, 2024 </h6>
                                 <h4>Streamlined Web Development: Embracing Jekyll for Content Management <!-- <h5> Nasser Abumariam </h5> --> </h4>
+                                <h5>#Web_Development</h5>
                             </div>
                         </div>
                     </a>
