--- a/software/001-3d-printer-utility.html
+++ b/software/001-3d-printer-utility.html
@@ -12,6 +12,7 @@
         <script src="/js/code-copy.js"></script>
         <link rel="stylesheet" href="/css/reset.css">
         <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/css/global.css">
         <link rel="stylesheet" href="/css/code.css">
         <link rel="stylesheet" href="/css/software.css">
         <script src="/js/contents.js"></script>
