Software template developed

--- a/software/001-3d-printer-utility.html
+++ b/software/001-3d-printer-utility.html
@@ -61,7 +61,21 @@
                 </div>
             </div>
             <section>
-                Connect to your 3D printer via serial. This lightweight desktop application allows you to effortlessly send and receive G-Code commands, monitor your printer's status, and even capture timelapses of your prints.
+                <div class="appDetails">
+                    <img src="/img/software/3d_printer_utility/logo.png" alt="">
+                    <div class="description">
+                        <h2>3D Printer Utility</h2>
+                        <p class="tags">#</p>
+                        <hr>
+                        <h4>Description</h4>
+                        <p>Connect to your 3D printer via serial. This lightweight desktop application allows you to effortlessly send and receive G-Code commands, monitor your printer's status, and even capture timelapses of your prints.</p>
+                        <div class="downloads">
+                            <button class="versions">Other Versions</button>
+                            <button class="download">Download</button>
+                        </div>
+                    </div>
+                    
+                </div>
                 
 
             </section>
