--- a/software/002-image-optimizer.html
+++ b/software/002-image-optimizer.html
@@ -61,8 +61,32 @@
                 </div>
             </div>
             <section>
-                Locally optimize images for your website. Whether you prefer a one-at-a-time approach or need to process images in bulk, this tool ensures seamless optimization for improved website performance.
-                
+                <div class="appDetails">
+                    <img src="/img/software/image_optimizer/logo.png" alt="">
+                    <div class="description">
+                        <h2>Image Optimizer</h2>
+                        <p class="tags">#Web_Development</p>
+                        <hr>
+                        <h4>Description</h4>
+                        <p>Locally optimize images for your website. Whether you prefer a one-at-a-time approach or need to process images in bulk, this tool ensures seamless optimization for improved website performance.</p>
+                        <div class="downloads">
+                            <button class="versions">Other Versions</button>
+                            <button class="download">Download</button>
+                        </div>
+                    </div>
+                    
+                </div>
+                <p class="reduceImage50"><img src="/img/software/image_optimizer/001.png" alt="Snapshot of app" title="Snapshot of app" /></p>
+
+<p>Locally resize your images to your specifications using this handy desktop application. With this proprietary app, you can easily resize unlimited quantities of images based on your specifications.</p>
+
+<p class="reduceImage50"><img src="/img/software/image_optimizer/001.png" alt="Snapshot of app" title="Snapshot of app" /></p>
+
+<p>Using bulk processing, you can open entire folders of images for your processing convenience. Using the resizing pane, you can select how you want to crop your image, and select a desired aspect ratio.</p>
+
+<p class="reduceImage50"><img src="/img/software/image_optimizer/001.png" alt="Snapshot of app" title="Snapshot of app" /></p>
+
+<p>With the QuikOptimize function, you can even create batches of different images, creating multiple copies of the same image in different sizes.</p>
 
             </section>
             <section>
