Software page continued development

--- a/software/002-image-optimizer.html
+++ b/software/002-image-optimizer.html
@@ -58,6 +58,7 @@
                 <div id="hero_image"></div>
                 <div id="hero_text">
                     <h1>Image Optimizer</h1>
+                    <h5>This Page is Currently Under Developmemt</h5>
                 </div>
             </div>
             <section>
@@ -71,7 +72,7 @@
                         <p>Locally optimize images for your website. Whether you prefer a one-at-a-time approach or need to process images in bulk, this tool ensures seamless optimization for improved website performance.</p>
                         <div class="downloads">
                             <button class="versions">Other Versions</button>
-                            <button class="download">Download</button>
+                            <button class="download">Download <img src="/img/icons/operating_systems/windows.png" alt=""></button>
                         </div>
                     </div>
                     
@@ -80,7 +81,7 @@
 
 <p>Locally resize your images to your specifications using this handy desktop application. With this proprietary app, you can easily resize unlimited quantities of images based on your specifications.</p>
 
-<p class="reduceImage50"><img src="/img/software/image_optimizer/001.png" alt="Snapshot of app" title="Snapshot of app" /></p>
+<p class="reduceImage50"><img src="/img/software/image_optimizer/002.png" alt="Snapshot of app" title="Snapshot of app" /></p>
 
 <p>Using bulk processing, you can open entire folders of images for your processing convenience. Using the resizing pane, you can select how you want to crop your image, and select a desired aspect ratio.</p>
 
@@ -91,9 +92,12 @@
             </section>
             <section>
                 <hr>
+                <div id="software_info">
+                    <p>#Web_Development</p>
+                    <p><b>Version: </b>0.0.0.1</p>
+                </div>
             </section>
         </main>
-
         <footer>
     <div class="directories">
         <span id="leg">
