OS detect added

--- a/software/002-image-optimizer.html
+++ b/software/002-image-optimizer.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="/css/code.css">
         <link rel="stylesheet" href="/css/software.css">
         <script src="/js/contents.js"></script>
+        <script src="/js/os_detect.js"></script>
         <style>
             #hero_image {
                 background-image: url('/img/software/image_optimizer/hero.jpg');
@@ -72,7 +73,7 @@
                         <p>Locally optimize images for your website. Whether you prefer a one-at-a-time approach or need to process images in bulk, this tool ensures seamless optimization for improved website performance.</p>
                         <div class="downloads">
                             <button class="versions">Other Versions</button>
-                            <button class="download">Download <img src="/img/icons/operating_systems/windows.png" alt=""></button>
+                            <button class="download">Download <img src="/img/icons/operating_systems/unknown.png" id="os_icon"></button>
                         </div>
                     </div>
                     
