Added new logos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body>
         <div class="slim">
             <header class="blur">
-    <a href="/index.html"><img src="/img/logo.png" alt=""></a>
+    <a href="/index.html" id="logo"><img src="/img/logo.svg" alt=""></a>
     <nav>
         <a href="/index.html">Home</a>
         <a href="/software.html">Software</a>
@@ -57,6 +57,13 @@
             <section>
                 <h2><a href="/software.html">Software &#11100;</a></h2>
                 <div id="applications">
+                    
+                    <a href="/software/001-3d-printer-utility.html" class="tile" style="background-image: url('/img/software/3d_printer_utility/hero.jpg');">
+                        <div class="tile_wrap">
+                            <h3>3D Printer Utility</h3>
+                            <p>Connect to your 3D printer via serial. This lightweight desktop application allows you to effortlessly send and receive G-Code commands, monitor your printer's status, and even capture timelapses of your prints.</p>
+                        </div>
+                    </a>
                     
                     <a href="/software/002-image-optimizer.html" class="tile" style="background-image: url('/img/software/image_optimizer/hero.jpg');">
                         <div class="tile_wrap">
