--- a/software.html
+++ b/software.html
@@ -19,7 +19,7 @@
     <body>
         <div class="slim">
             <header class="blur">
-    <a href="/index.html"><img src="/img/logo.png" alt=""></a>
+    <a href="/index.html" id="logo"><img src="/img/logo.svg" alt=""></a>
     <nav>
         <a href="/index.html">Home</a>
         <a href="/software.html">Software</a>
@@ -62,6 +62,15 @@
                             <div class="info">
                                 <h4>Image Optimizer <!-- <h5>  </h5> --> </h4>
                                 <p>Locally optimize images for your website. Whether you prefer a one-at-a-time approach or need to process images in bulk, this tool ensures seamless optimization for improved website performance.</p>
+                            </div>
+                        </div>
+                    </a>
+                    
+                    <a href="/software/001-3d-printer-utility.html" style="background-image: url('/img/software/3d_printer_utility/hero.jpg');">
+                        <div class="app">
+                            <div class="info">
+                                <h4>3D Printer Utility <!-- <h5>  </h5> --> </h4>
+                                <p>Connect to your 3D printer via serial. This lightweight desktop application allows you to effortlessly send and receive G-Code commands, monitor your printer's status, and even capture timelapses of your prints.</p>
                             </div>
                         </div>
                     </a>
