--- a/software/002-image-optimizer.html
+++ b/software/002-image-optimizer.html
@@ -26,7 +26,7 @@
     <body>
         <div class="slim">
             <header class="blur">
-    <a href="/index.html"><img src="/img/logo.png" alt=""></a>
+    <a href="/index.html" id="logo"><img src="/img/logo.svg" alt=""></a>
     <nav>
         <a href="/index.html">Home</a>
         <a href="/software.html">Software</a>
