--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                     <a href="/software/001-3d-printer-utility.html" class="tile" style="background-image: url('/img/software/3d_printer_utility/hero.jpg');">
                         <div class="tile_wrap">
                             <h3>3D Printer Utility</h3>
+                            <img src="img/software/3d_printer_utility/logo.png">
                             <p>Connect to your 3D printer via serial. This lightweight desktop application allows you to effortlessly send and receive G-Code commands, monitor your printer's status, and even capture timelapses of your prints.</p>
                         </div>
                     </a>
@@ -68,6 +69,7 @@
                     <a href="/software/002-image-optimizer.html" class="tile" style="background-image: url('/img/software/image_optimizer/hero.jpg');">
                         <div class="tile_wrap">
                             <h3>Image Optimizer</h3>
+                            <img src="img/software/image_optimizer/logo.png">
                             <p>Locally optimize images for your website. Whether you prefer a one-at-a-time approach or need to process images in bulk, this tool ensures seamless optimization for improved website performance.</p>
                         </div>
                     </a>
