--- a/software/001-3d-printer-utility.html
+++ b/software/001-3d-printer-utility.html
@@ -78,7 +78,13 @@
                     </div>
                     
                 </div>
-                
+                <p class="reduceImage50"><img src="/img/software/3d_printer_utility/001.png" alt="Snapshot of app" title="Snapshot of app" /></p>
+
+<video controls="">
+  <source src="/media/Test Print Trial 2.mp4" type="video/mp4" />
+  <source src="/media/Test Print Trial 2.mp4" type="video/ogg" />
+Your browser does not support the video tag.
+</video>
 
             </section>
             <section>
