Fixed read more bug on blog page

--- a/software/001-3d-printer-utility.html
+++ b/software/001-3d-printer-utility.html
@@ -73,7 +73,7 @@
                         <p>Connect to your 3D printer via serial. This lightweight desktop application allows you to effortlessly send and receive G-Code commands, monitor your printer's status, and even capture timelapses of your prints.</p>
                         <div class="downloads">
                             <button class="versions">Other Versions</button>
-                            <button class="download">Download <img src="/img/icons/operating_systems/unknown.png" id="os_icon"></button>
+                            <button class="download" onclick="downloadFile('3D Printer Utility')">Download <img src="/img/icons/operating_systems/unknown.png" id="os_icon"></button>
                         </div>
                     </div>
                     
