--- a/software/002-image-optimizer.html
+++ b/software/002-image-optimizer.html
@@ -73,7 +73,7 @@
                         <p>Locally optimize images for your website. Whether you prefer a one-at-a-time approach or need to process images in bulk, this tool ensures seamless optimization for improved website performance.</p>
                         <div class="downloads">
                             <button class="versions">Other Versions</button>
-                            <button class="download">Download <img src="/img/icons/operating_systems/unknown.png" id="os_icon"></button>
+                            <button class="download" onclick="downloadFile('Image Optimizer')">Download <img src="/img/icons/operating_systems/unknown.png" id="os_icon"></button>
                         </div>
                     </div>
                     
